--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <h1>Song List</h1>
-    (<a href="/songlist/about">About</a>)
+    (<a href="/songlist/about.html">About</a>)
 	<table>
         <tr>
             <form action="/songlist/add" method="POST">
