--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,33 +5,7 @@
 <head>
 	<title>Song list!</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<style>
-    	body {
-    		font-family: monospace;
-    		margin: 5%;
-    		background: rgb(130, 170, 204) none repeat scroll 0% 0%;
-    		color: rgb(7, 3, 66);
-	}
-
-	a {
-    		color: rgb(147, 69, 69);
-	}
-
-	table, td {
-    		table-layout: fixed;
-    		word-wrap: break-word;
-    		width: 100%;
-    		padding: 10px;
-    		background: rgba(68, 18, 18, 0.08) none repeat scroll 0% 0%;
-	}
-
-	input[type="text"] {
-    		width: 100%; 
-    		box-sizing: border-box;
-    		-webkit-box-sizing: border-box;
-    		-moz-box-sizing: border-box;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="/songlist/style.css">
 </head>
 
 <body>
