--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 	<title>Song list!</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="/songlist/style.css">
-    <link href="{{ url_for('recent_feed') }}"
+    <link href="{{ url_for('get_feed') }}"
       rel="alternate"
       title="Songlist" 
       type="application/atom+xml">
