added link to source

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <h1>Song List</h1>
-    (<a href="/songlist/about.html">about</a>; <a href="/songlist/feed.atom">atom feed</a>)
+    (<a href="/songlist/about.html">about</a> / <a href="/songlist/feed.atom">atom feed</a> / 
+    <a href="https://github.com/bunburya/songlist">source</a>)
 	<table>
         <tr>
             <form action="/songlist/add" method="POST">
