slight change to index tenplate to reflect that time = UTC

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
             <td><b>Artist and name</b></td>
             <td><b>Submitted by</b></td>
             <td><b>Other info</b></td>
-            <td><b>Time submitted</b></td>
+            <td><b>Time submitted (UTC)</b></td>
             <td></td>
         </tr>
         {% for song in songlist %}
