adding play functionality to main file

--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -125,6 +125,8 @@
         </tr>
         <tr>
             <h2>Streaming services to play:</h2>
+            <!--TODO: generate this the same way as submitters,
+            maybe implement a python function to return supported services-->
             <input type="checkbox" name="services" value="youtube" checked> YouTube
             <input type="checkbox" name="services" value="soundcloud" checked> Soundcloud
         </tr>
