--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -35,6 +35,8 @@
             ytIframe = ytWidget.c;
             ytIframe.hidden = true;
             if (songlist) {
+                // TODO: this if-else can go once this function
+                // is moved below songlist (keeping the code below)
                 songlist.players.youtube = {
                     widget: ytWidget,
                     iframe: ytIframe,
@@ -44,6 +46,10 @@
         }
 
         var songlist = {
+
+            shuffle: false,
+
+            repeat: 0   // 0 = no repeat, 1 = repeat one, 2 = repeat all
 
             baseURL: 'http://bunburya.eu/songlist',
             
@@ -94,6 +100,29 @@
                 }
                 return queries.join('+');
             },
+
+            getNextSong: function(play) {
+                play = play || false;
+                var next;
+                if (songlist.playing >= songlist.playlist.length) {
+                    if (songlist.repeat == 2) {
+                        next = 0;
+                    } else if (songlist.repeat == 1) {
+                        next = songlist.playing;
+                    } else if (songlist.repeat == 0) {
+                        next = -1;
+                    }
+                } else {
+                    next = songlist.playing + 1;
+                }
+                if (play) {
+                    songlist.playing = next;
+                 rn songlist.loadCurrentSong();
+                } else {
+                    return songlist.playlist[next];
+                }
+            },
+
             
             loadSCPlayer: function(song) {
                 SC.get('/resolve/?url=' + song.url,
@@ -176,7 +205,7 @@
                 var playlist = songlist.getURL(url);
                 return JSON.parse(playlist);
             },
-            
+
             loadSong: function(song) {
                 var service = songlist.getService(song.domain);
                 songlist.stop();
@@ -235,31 +264,47 @@
     <h1>Play the songlist</h1>
     <table>
         <tr>
-            <h2>Play songs submitted by:</h2>
-            {% for s in submitters %}
-            <input type="checkbox" name="submitters" value="{{ s }}" checked> {{ s }}
-            {% endfor %}
+            <th colspan="3">Play songs submitted by:</th>
         </tr>
+        <tr><td colspan="3">
+            {% for s in submitters %}
+            <input type="checkbox" name="submitters" value="{{ s }}" checked> {{ s if s else '[no submitter]' }}
+            {% endfor %}
+        </td></tr>
         <tr>
-            <h2>Streaming services to play:</h2>
+            <th colspan="3">Streaming services to play:</th>
+        </tr>
+        <tr><td colspan="3">
             <!--TODO: generate this the same way as submitters,
             maybe implement a python function to return supported services-->
             <input type="checkbox" name="services" value="youtube" checked> YouTube
             <input type="checkbox" name="services" value="soundcloud" checked> Soundcloud
-        </tr>
+        </td></tr>
         <tr>
-            <h2>Controls</h2>
+            <th colspan="3">Controls</th>
+        </tr>
+        <tr><td colspan="3">
             <button onclick="songlist.load()">Load</button>
             <button onclick="songlist.loadCurrentSong()">Play</button>
             <button onclick="songlist.stop()">Stop</button>
             <button onclick="songlist.prev()">Prev</button>
             <button onclick="songlist.next()">Next</button>
+        </td></tr>
+        <tr>
+            <th colspan="3">Playlist</th>
         </tr>
-        <tr id="player">
-            <h2>Player</h2>
+        <tr id="playlist">
+            <td id="prev_play"><b>Previous</b><br></td>
+            <td id="now_play"><b>Now playing</b><br></td>
+            <td id="next_play"><b>Next</b><br></td>
+        </tr>
+        <tr>
+            <th colspan="3">Player</th>
+        </tr>
+        <tr><td id="player" colspan="3">
             <div id="yt_player"><!--youtube player to go here--></div>
             <div id="sc_player"><!--soundcloud player to go here--></div>
-        </tr>
+        </td></tr>
     
     </table>
     
