--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -49,7 +49,7 @@
 
             shuffle: false,
 
-            repeat: 0   // 0 = no repeat, 1 = repeat one, 2 = repeat all
+            repeat: 0,   // 0 = no repeat, 1 = repeat one, 2 = repeat all
 
             baseURL: 'http://bunburya.eu/songlist',
             
@@ -117,7 +117,7 @@
                 }
                 if (play) {
                     songlist.playing = next;
-                 rn songlist.loadCurrentSong();
+                    songlist.loadCurrentSong();
                 } else {
                     return songlist.playlist[next];
                 }
