--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -27,12 +27,13 @@
                 events: {
                     'onStateChange': function(event) {
                         if (event.data == 0) {
-                            songlist.next();
+                            songlist.getNextSong(true);
                         }
                     }
                 }
             });
-            ytIframe = ytWidget.c;
+            ytIframe = document.getElementById('yt_player');
+            console.log(ytIframe);
             ytIframe.hidden = true;
             if (songlist) {
                 // TODO: this if-else can go once this function
@@ -123,6 +124,28 @@
                 }
             },
 
+            getPrevSong: function(play) {
+                play = play || false;
+                var prev;
+                if (songlist.playing == 0) {
+                    if (songlist.repeat == 2) {
+                        prev = songlist.playlist.length - 1;
+                    } else if (songlist.repeat == 1) {
+                        prev = songlist.playing;
+                    } else if (songlist.repeat == 0) {
+                        prev = 0;
+                    }
+                } else {
+                    prev = songlist.playing - 1;
+                }
+                if (play) {
+                    songlist.playing = prev;
+                    songlist.loadCurrentSong();
+                } else {
+                    return songlist.playlist[prev];
+                }
+            },
+
             
             loadSCPlayer: function(song) {
                 SC.get('/resolve/?url=' + song.url,
@@ -165,7 +188,7 @@
                 // NOTE: not sure if this bind to READY is effective to call play() if the
                 // widget is already ready by the time it is called.
                 scWidget.bind(SC.Widget.Events.READY, function() { scWidget.play() });
-                scWidget.bind(SC.Widget.Events.FINISH, function() { songlist.next() });
+                scWidget.bind(SC.Widget.Events.FINISH, function() { songlist.getNextSong(true) });
             },
             
             loadYTPlayer: function(song) {
@@ -243,19 +266,6 @@
                 songlist.loadCurrentSong();
             },
 
-            next: function() {
-                // TODO: handle case where next() is called on last song
-                songlist.playing++;
-                songlist.loadSong(songlist.playlist[songlist.playing]);
-            },
-
-            prev: function() {
-                if (songlist.playing > 0) {
-                    songlist.playing--;
-                }
-                songlist.loadSong(songlist.playlist[songlist.playing]);
-            }
-        
         }
     </script>
 </head>
@@ -284,11 +294,11 @@
             <th colspan="3">Controls</th>
         </tr>
         <tr><td colspan="3">
-            <button onclick="songlist.load()">Load</button>
+            <button onclick="songlist.load()">Load Playlist</button>
             <button onclick="songlist.loadCurrentSong()">Play</button>
             <button onclick="songlist.stop()">Stop</button>
-            <button onclick="songlist.prev()">Prev</button>
-            <button onclick="songlist.next()">Next</button>
+            <button onclick="songlist.getPrevSong(true)">Prev</button>
+            <button onclick="songlist.getNextSong(true)">Next</button>
         </td></tr>
         <tr>
             <th colspan="3">Playlist</th>
