--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Song list!</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="/songlist/style.css">
+	<link rel="stylesheet" type="text/css" href="/songlist/static/style.css">
     <link href="{{ url_for('get_feed') }}"
       rel="alternate"
       title="Songlist" 
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Song List</h1>
-    (<a href="/songlist/about.html">about</a> / <a href="/songlist/feed.atom">atom feed</a> / 
+    (<a href="/songlist/static/about.html">about</a> / <a href="/songlist/feed.atom">atom feed</a> / 
     <a href="https://github.com/bunburya/songlist">source</a>)
 	<table>
         <tr>
