--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Play</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="/songlist/style.css">
+    <link rel="stylesheet" type="text/css" href="/songlist/static/style.css">
     <script src="http://connect.soundcloud.com/sdk.js"></script>
     <script src="https://w.soundcloud.com/player/api.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
@@ -13,6 +13,7 @@
         
         // initialise soundcloud API with client ID
         SC.initialize({ client_id: "77e325396300c9b6d63be0cbc005bb72" });
+        console.log(SC);
         
         var ytWidget;
         var ytIframe;
@@ -148,6 +149,7 @@
 
             
             loadSCPlayer: function(song) {
+                console.log(song);
                 SC.get('/resolve/?url=' + song.url,
                         songlist.loadSCPlayerFromValidURL);
             },
@@ -257,7 +259,7 @@
             },
 
             
-            load: function() {
+            loadPlaylist: function() {
                 var services = songlist.getChecked('services');
                 var submitters = songlist.getChecked('submitters');
                 var playlist = songlist.getPlaylist(services, submitters);
@@ -294,7 +296,7 @@
             <th colspan="3">Controls</th>
         </tr>
         <tr><td colspan="3">
-            <button onclick="songlist.load()">Load Playlist</button>
+            <button onclick="songlist.loadPlaylist()">Load Playlist</button>
             <button onclick="songlist.loadCurrentSong()">Play</button>
             <button onclick="songlist.stop()">Stop</button>
             <button onclick="songlist.getPrevSong(true)">Prev</button>
